proses pembuatan survey form (on-progres)

--- a/style.css
+++ b/style.css
@@ -1,31 +1,87 @@
 :root {
-    /* font */
-    --title-style-font: Poppins-SemiBold;
-    --sub-title-style-font: Poppins-Italic;
-    --basic-font: Poppins-Medium;
-
-    /* color */
-    --bg-color: #344FA1;
-    --form-color: #110D34;
+  /* font */
+  --title-style-font: Poppins-SemiBold;
+  --sub-title-style-font: Poppins-Italic;
+  --basic-font: Poppins-Medium;
 }
 
 @font-face {
-    font-family: Poppins-SemiBold;
-    src: url(font/Poppins-SemiBold.otf);
+  font-family: Poppins-SemiBold;
+  src: url(font/Poppins-SemiBold.otf);
 }
 
 @font-face {
-    font-family: Poppins-Medium;
-    src: url(font/Poppins-Medium.otf);
+  font-family: Poppins-Medium;
+  src: url(font/Poppins-Medium.otf);
 }
 
 @font-face {
-    font-family: Poppins-Italic;
-    src: url(font/Poppins-Italic.otf);
+  font-family: Poppins-Italic;
+  src: url(font/Poppins-Italic.otf);
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* background style */
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+      360deg,
+      rgba(52, 79, 161, 0.5) 0%,
+      rgba(52, 79, 161, 0.5) 100%
+    ),
+    url(img/bg-image.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  z-index: -1;
+}
+
+body {
+  color: white;
+}
+
+/* title content */
+#title-content {
+  text-align: center;
+  padding-top: 60px;
+  padding-right: 34px;
+  padding-left: 34px;
+}
+
+#title {
+  font-family: var(--title-style-font);
+  font-size: 2rem;
+  line-height: 1.2;
+}
+
+#description {
+  font-family: var(--sub-title-style-font);
+  padding-top: 5px;
+}
+
+/* form */
+#survey-form {
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 500px;
+  min-height: 1000px;
+  background: rgba(17, 13, 52, 0.5);
+}
+
+/* responsive breakpoint */
+@media screen and (min-width: 1024px) {
+  #survey-form {
+    max-width: 600px;
+  }
 }
