--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body::before {
 
 body {
   color: white;
+  min-height: 2500px;
 }
 
 /* title content */
@@ -71,12 +72,67 @@ body {
 
 /* form */
 #survey-form {
+  display: grid;
+  gap: 22px;
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
+  padding: 32px 10px;
   max-width: 500px;
-  min-height: 1000px;
   background: rgba(17, 13, 52, 0.5);
+  font-family: var(--basic-font);
+}
+
+#form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+#name,
+#email,
+#number,
+#dropdown {
+  height: 37px;
+  padding: 10px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+}
+
+#name:focus,
+#email:focus,
+#number:focus,
+#dropdown:focus {
+  border: 2px solid royalblue;
+}
+
+#massage:focus {
+  border: 2px solid royalblue;
+}
+
+#massage,
+#submit {
+  border-radius: 5px;
+  padding: 10px;
+  resize: none;
+  outline: none;
+  border: none;
+}
+
+#submit {
+  margin-top: 20px;
+  background-color: #00adb5;
+  color: white;
+  font-size: 1rem;
+}
+
+#question-form {
+  margin-bottom: 5px;
+}
+
+#desc-form {
+  font-size: 0.8rem;
+  margin-bottom: 5px;
 }
 
 /* responsive breakpoint */
